Add adapter and pagination.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TestApplication</string>
     <string name="msg_no_internet">No internet connection found, please check your internet connection.</string>
+    <string name="msg_server_error">Server or network error, try after sometime.</string>
 </resources>
